# IncluScan

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/runs/scan-1a8afd12/: index.html  meta.json
docs/runs/scan-6c1cc2d7/: index.html  meta.json
docs/runs/scan-8fde82aa/: index.html  meta.json
docs/runs/scan-c6624714/: index.html  meta.json
docs/runs/scan-c6e24d4e/: index.html  meta.json
docs/runs/scan-cf5d0194/: index.html  meta.json
docs/runs/scan-d37df7fa/: index.html  meta.json
docs/runs/scan-fe361228/: index.html  meta.json
docs/snapshots/: snapshot-9feabade.jsonl  snapshot-eb03ffc0.jsonl  snapshot-edffb8c6.jsonl
docs/superpowers/plans/: 2026-05-26-incluscan-implementation-plan.md  2026-05-26-report-presentation-implementation-plan.md  2026-05-26-spinner-implementation-plan.md
docs/superpowers/specs/: 2026-05-26-incluscan-design.md  2026-05-26-report-design.md  2026-05-26-spinner-design.md
incluscan/: __init__.py
src/incluscan/: __init__.py  __main__.py  cli.py  config.py  models.py  report.py  scanner.py  scraper.py  storage.py  ui.py  vendors.py
src/incluscan/templates/: review_prompt.md
tests/: conftest.py  test_cli.py  test_cli_interaction.py  test_e2e.py  test_models.py  test_report.py  test_scraper.py  test_storage.py  test_ui.py  test_vendors.py
tests/fixtures/html/: uc3m-sample.html
