[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incluscan"
version = "0.1.0"
description = "AI-powered inclusive language scanner"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pypdf>=5.0",
  "requests>=2.32",
  "rich>=13.7",
]

[project.scripts]
incluscan = "incluscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
